# DEDSPortfolio

./: Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_4.3.ipynb  code.ipynb  pyproject.toml  requirements.txt
notebooks/: Practicum_2.1_Opdrachten.ipynb  Practicum_2.2_Opdrachten.ipynb  Practicum_2.3_Opdrachten.ipynb  Practicum_3.1_Opdrachten.ipynb  Practicum_3.2_Opdrachten.ipynb  Practicum_4.3.ipynb
script/src/: main.py  script.py  settings.py
