[tool.poetry]
name = "dedsportfolio"
version = "0.1.0"
description = ""
authors = ["David <davidoutdeveloper@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pyodbc = "^5.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

